@@ -1,3 +1,9 @@
+Mon Feb 11 22:38:16 GMT 2013  Olly Betts <olly@survex.com>
+
+	* xlsxparse.cc: Correct "max" -> "min" when reserving space for shared
+	  strings.  This only means we now reserve a more appropriate amount
+	  of space to start with.
+
 Fri Feb 01 04:11:50 GMT 2013  Olly Betts <olly@survex.com>
 
 	* Makefile.am: Ship new file myhtmlparse.tokens.
